[tool.poetry]
name = "haas"
version = "0.0.0"
description = "Extensible Python Test Runner"
authors = ["Simon Jagoe <simon@scalative.com>"]
license = "BSD"
readme = "README.rst"
repository = "https://github.com/scalative/haas"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
]
include = [
    { path = "docs", format = "sdist" },
    { path = "*.rst", format = "sdist" },
    { path = "*requirements.txt", format = "sdist" },
    { path = "tox.ini", format = "sdist" },
]

[tool.poetry.scripts]
haas = "haas.main:main"

[tool.poetry.plugins."haas.hooks.environment"]
coverage = "haas.plugins.coverage:Coverage"

[tool.poetry.plugins."haas.discovery"]
default = "haas.plugins.discoverer:Discoverer"

[tool.poetry.plugins."haas.runner"]
default = "haas.plugins.runner:BaseTestRunner"
parallel = "haas.plugins.parallel_runner:ParallelTestRunner"

[tool.poetry.plugins."haas.result.handler"]
default = "haas.plugins.result_handler:StandardTestResultHandler"
quiet = "haas.plugins.result_handler:QuietTestResultHandler"
verbose = "haas.plugins.result_handler:VerboseTestResultHandler"
timing = "haas.plugins.result_handler:TimingResultHandler"

[tool.poetry.dependencies]
python = "^3.7"
statistics = ">= 1.0"
stevedore = ">= 3.5.2"

[tool.poetry.group.dev.dependencies]
coverage = ">= 7.0.0"
testfixtures = ">= 7.0.0"

[tool.poetry.group.docs.dependencies]
refactordoc = ">= 0.3.1"
sphinx = ">= 5.3.0"
sphinx-rtd-theme = ">= 2.0.0"

[build-system]
requires = ["poetry-core >= 1.0.0", "poetry-dynamic-versioning >= 1.0.0, < 2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
